# ccusage-statusline-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  PKGBUILD  README.md  benchmark.sh
.github/workflows/: ci.yml  release.yml
hooks/: install.sh  pre-commit
src/: api_usage.rs  blocks.rs  burn_rate.rs  cache.rs  claude_binary.rs  claude_update.rs  config.rs  context.rs  firefox.rs  format.rs  install.rs  main.rs  paths.rs  pricing.rs  types.rs
