[package]
name = "ccusage-statusline-rs"
version = "1.3.1"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
owo-colors = "4.1"
anyhow = "1.0"
fs2 = "0.4"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
num-format = "0.4"
clap = { version = "4.5", features = ["derive"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
curl = "0.4"
