[package]
name = "ccusage-statusline-rs"
version = "1.10.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
owo-colors = "4.1"
anyhow = "1.0"
fs2 = "0.4"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
clap = { version = "4.5", features = ["derive"] }
semver = "1.0"
inquire = "0.9"
dunce = "1.0"
path-slash = "0.2"

